@@ -23,9 +23,6 @@
 /*
  * Challenge based authentication. 
  * Thanx to Chris Todd<christ@insynq.com> for the good idea.
- *
- * Jim Yonan, 05/24/2001
- * 	gen_chal rewrite to use better random number generator 
  */ 
 
 #include "config.h"
@@ -180,7 +177,10 @@ char *bf2cf(struct vtun_host *host)
      return str;
 }
 
-/* return 1 on success, otherwise 0 */
+/* return 1 on success, otherwise 0 
+   Example:
+   FLAGS: <TuE1>
+*/
 
 int cf2bf(char *str, struct vtun_host *host)
 {
@@ -188,6 +188,7 @@ int cf2bf(char *str, struct vtun_host *host)
      int s;
 
      if( (ptr = strchr(str,'<')) ){ 
+	vtun_syslog(LOG_DEBUG,"Remote Server sends %s.", ptr);
 	ptr++;
 	while(*ptr){  
 	   switch(*ptr++){
@@ -229,10 +230,19 @@ int cf2bf(char *str, struct vtun_host *host)
 		ptr = p;
 		break;
 	     case 'E':
-		if((s = strtol(ptr,&p,10)) == ERANGE || ptr == p) 
+	        /* new form is 'E10', old form is 'E', so remove the
+		   ptr==p check */
+		if((s = strtol(ptr,&p,10)) == ERANGE) {
+		   vtun_syslog(LOG_ERR,"Garbled encryption method.  Bailing out.");
 		   return 0;
+		}
 		host->flags |= VTUN_ENCRYPT;
-		host->cipher = s; 
+		if (0 == s) {
+		   host->cipher = VTUN_LEGACY_ENCRYPT;
+		   vtun_syslog(LOG_INFO,"Remote server using older encryption.");
+		} else {
+		   host->cipher = s; 
+		}
 		ptr = p;
 		break;
      	     case 'S':
@@ -244,6 +254,9 @@ int cf2bf(char *str, struct vtun_host *host)
 		}
 		ptr = p;
 		break;
+	     case 'F':
+	        /* reserved for Feature transmit */
+	       break;
 	     case '>':
 	        return 1;
 	     default:
